--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
         </div>
 
         <div class="board" >
+            <h2 class="title">Output: </h2>
             <p id="output">
                 
             </p>
-
+        
         </div>
+        <div class="spacer"></div>
     </div>
 </body>
 <script src="/L33t/script.js"></script>
