added condition for quotations marks
added condition for quotations marks and added instructions on HTML,

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <h1 class="greeting">
                 Convert normal text to L33t speak!
             </h1>
+            <p class="explaning">If you are using quotation marks ( " ") please use the single quotes (' ' ).</p>
         </div>
 
         <div class="input">
